# attila

./: .blueprint  .env.example  .phpstorm.meta.php  Cargo.toml  README.md  _ide_helper.php  _ide_helper_models.php  composer.json  draft.yaml  package-lock.json  package.json  tailwind.config.js
app/Helpers/: Faker.php  UrlBuilder.php
app/Jobs/: AdjudicateGameJob.php
app/Models/: BasePower.php  Game.php  Instruction.php  Location.php  Message.php  Movement.php  Phase.php  PhasePowerData.php  Power.php  User.php  Variant.php  Vote.php
app/Policies/: GamePolicy.php
config/: app.php  blueprint.php  diplomacy.php  laravel-impersonate.php
database/factories/: BasePowerFactory.php  GameFactory.php  InstructionFactory.php  LocationFactory.php  MessageFactory.php  MovementFactory.php  PhaseFactory.php  PhasePowerDataFactory.php  PowerFactory.php  UserFactory.php  VariantFactory.php  VoteFactory.php
database/migrations/: 2020_11_08_001914_create_variants_table.php  2020_11_08_001916_create_games_table.php  2020_11_08_001918_create_phases_table.php  2020_11_08_001919_create_phase_power_data_table.php  2020_11_08_001920_create_locations_table.php  2020_11_08_001922_create_movements_table.php  2020_11_08_003551_create_variants_table.php  2020_11_08_003552_create_base_powers_table.php  2020_11_08_003553_create_powers_table.php  2020_11_08_003554_create_games_table.php  2020_11_08_003555_create_messages_table.php  (+6 more)
http/: post.http
public/js/: app.js
routes/: web.php
src/: composer.json  main.rs  standings.json
try/: execute.py  pyproject.toml  rankings.json
(+35 files in other folders)
