[package]
name = "attila"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies] 
multi-skill = { git="https://github.com/Wulfheart/Elo-MMR.git", rev="fab27a0"}
comrak = "0.12"
[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]
