[tool.poetry]
name = "try"
version = "0.1.0"
description = ""
authors = ["Alex Wulf <alex.f.wulf@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^1.22.3"
requests = "^2.27.1"
matplotlib = "^3.5.1"
PyQt5 = "^5.15.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
